[project]
name = "ComfyUI-Gallery"
description = "Real-time Output Gallery for ComfyUI with image metadata inspection."
version = "1.0.1" 
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/PanicTitan/ComfyUI-Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "panic-titan"
DisplayName = "ComfyUI-Gallery"
Icon = "https://raw.githubusercontent.com/PanicTitan/ComfyUI-Gallery/refs/heads/main/logo.png"